--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
         .box {
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-around;
             align-content: center;
-            padding-top: 100px;
+            padding-top: 7vw;
+            height: 30vh;
         }
 
         .inputbox {
             width: 200px;
             margin: 10px;
+            font-size: 100%;
         }
 
         .headtitle {
             display: flex;
             justify-content: center;
+            font-size: 3vh;
         }
     </style>
 </head>
@@ -38,11 +41,16 @@
 
         </div>
         <div>
+            <h1 style="font-size: 7vw;">2023 RAY 父親節活動</h1>
+            <hr style="color: black; border: solid 2px;">
             <div class="box">
                 <h2 class="headtitle">請輸入密碼</h2>
-                <input class="inputbox" type="text" inputmode="numeric" id="inputpassword" size="20"
-                    placeholder="請輸入四位數密碼">
-                <button class="inputbox" type="button" id="submit" onclick="submit()">送出</button>
+                <div class="headtitle">
+                    <input class="inputbox" type="text" inputmode="numeric" id="inputpassword" placeholder="請輸入四位數密碼">
+                </div>
+                <div class="headtitle">
+                    <button class="inputbox" type="button" id="submit" onclick="submit()">送出</button>
+                </div>
             </div>
         </div>
         <div>
