--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             justify-content: space-around;
             align-content: center;
             padding-top: 7vw;
-            height: 30vh;
+            height: 60vw;
         }
 
         .inputbox {
