--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             justify-content: space-around;
             align-content: center;
             padding-top: 7vw;
-            height: 60vw;
+            height: 30dvh;
         }
 
         .inputbox {
-            width: 200px;
+            width: 250px;
             margin: 10px;
             font-size: 100%;
         }
@@ -30,7 +30,7 @@
         .headtitle {
             display: flex;
             justify-content: center;
-            font-size: 3vh;
+            font-size: 5vh;
         }
     </style>
 </head>
@@ -40,7 +40,7 @@
         <div>
         </div>
         <div>
-            <h1 style="font-size: 7vw;">2023 RAY 父親節活動</h1>
+            <h1 style="font-size: 200%;">2023 RAY 父親節活動</h1>
             <hr style="color: black; border: solid 2px;">
             <div class="box">
                 <h2 class="headtitle">請輸入密碼</h2>
