--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <button type="button" id="finish" onclick="Finish()">完成</button>
     </div>
     <div class="message" id="wrong_mes">
-        <span class="wrong-content">密<br>碼<br>錯<br>誤</span>
+        <span class="wrong-content">密<br>碼<br>錯<br>誤<br></span>
         <button type="button" id="try-again" onclick="Close()">再試一次</button>
     </div>
 
