mes-button-margin

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             justify-content: center;
             font-size: 10dvh;
         }
+
+        #finish,
+        #try-again {
+            margin: 5px;
+        }
     </style>
 </head>
 
