--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <hr style="color: black; border: solid 2px;">
             <div class="box">
-                <h2 class="description">請輸入密碼</h2>
+                <h2 class="description">請輸入終極密碼</h2>
                 <div class="input-region">
                     <input class="inputbox" type="text" inputmode="numeric" id="inputpassword" placeholder="請輸入四位數密碼">
                 </div>
@@ -114,9 +114,14 @@
         </div>
     </div>
 
-    <div class="message" style="background-color: rgb(114, 207, 150);" id="correct_mes">
+    <div class="message" style="background-color: rgb(114, 207, 150); display: flex" id="correct_mes">
         <span class="correct-content">恭<br>喜<br>通<br>關<br></span>
-        <p>請找RAY領取您的獎品</p>
+        <p style="width: 85%; font-size: small; text-align: center;">
+            <br>
+            感謝您對RAY父親節限定報的支持～<br>
+            請向RAY工作人員領取您的精美大禮！<br>
+            再次祝您 父親節快樂～
+        </p>
         <button type="button" id="finish" onclick="Finish()">完成</button>
     </div>
     <div class="message" id="wrong_mes">
