correct-mes-close-wrong-mes-br

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <div class="message" style="background-color: rgb(114, 207, 150); display: flex" id="correct_mes">
+    <div class="message" style="background-color: rgb(114, 207, 150);" id="correct_mes">
         <span class="correct-content">恭<br>喜<br>通<br>關<br></span>
         <p style="width: 85%; font-size: small; text-align: center;">
             <br>
@@ -126,7 +126,7 @@
     </div>
     <div class="message" id="wrong_mes">
         <span class="wrong-content">密<br>碼<br>錯<br>誤<br></span>
-        <br>
+        <br><br>
         <button type="button" id="try-again" onclick="Close()">再試一次</button>
     </div>
 
