change password index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="box">
                 <h2 class="description">請輸入終極密碼</h2>
                 <div class="input-region">
-                    <input class="inputbox" type="text" inputmode="numeric" id="inputpassword" placeholder="請輸入四位數密碼">
+                    <input class="inputbox" type="text" inputmode="numeric" id="inputpassword" placeholder="請輸入終極密碼">
                 </div>
                 <div class="input-region">
                     <button class="inputbox" type="button" id="submit" onclick="submit()">送出</button>
@@ -133,7 +133,7 @@
 
 
     <script>
-        const answer = "1234";
+        const answer = "56789";
 
         function Correct() {
             // alert("correct!");
